welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
  if (temp1<0 & temp2 > 0 || temp1>0 & temp<0){
    return true
  }
  else {
    return false
  }
}